--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,19 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    implementation "com.github.parse-community.Parse-SDK-Android:parse:1.20.0"
+    implementation "com.github.parse-community.Parse-SDK-Android:fcm:1.20.0"
+    implementation 'com.parse.bolts:bolts-android:1.4.0'
+
+    def nav_version = "2.3.0-alpha06"
+    implementation "androidx.navigation:navigation-fragment:$nav_version"
+    implementation "androidx.navigation:navigation-ui:$nav_version"
+    implementation 'com.google.android.material:material:1.0.0-alpha3'
+
 }
