--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
     implementation 'com.google.android.gms:play-services-auth:18.1.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
@@ -40,6 +41,8 @@ dependencies {
     implementation "androidx.navigation:navigation-ui:$nav_version"
     implementation 'com.google.android.material:material:1.0.0-alpha3'
 
+    implementation 'com.google.android.libraries.places:places:2.3.0'
+
     implementation 'com.airbnb.android:lottie:3.4.1'
 
     implementation 'com.google.firebase:firebase-analytics:17.4.4'
@@ -49,6 +52,8 @@ dependencies {
     // Facebook
     implementation 'com.github.parse-community:ParseFacebookUtils-Android:1.14.0'
     implementation 'com.facebook.android:facebook-android-sdk:1.14.0'
+    implementation 'com.github.yukuku:ambilwarna:2.0.1'
+
 
 
 
