Fixed shared prefs, changed marker colours, fixed other bugs, added notis

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation 'com.facebook.android:facebook-android-sdk:1.14.0'
     implementation 'com.github.yukuku:ambilwarna:2.0.1'
 
+    implementation 'com.google.code.gson:gson:2.8.5'
 
     implementation 'com.github.parse-community:ParseTwitterUtils-Android:1.13.0'
 
