--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,9 @@ dependencies {
 
     implementation 'com.github.parse-community:ParseTwitterUtils-Android:1.13.0'
 
+    implementation 'com.android.volley:volley:1.1.1'
+
+
 
 
 
