--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
     implementation 'com.google.android.gms:play-services-auth:18.1.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
@@ -64,6 +66,8 @@ dependencies {
     implementation 'com.github.parse-community:ParseTwitterUtils-Android:1.13.0'
 
     implementation 'com.android.volley:volley:1.1.1'
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+
 
 
 
