--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
         minSdkVersion 23
         targetSdkVersion 29
         versionCode 1
-        versionName "1.0"
+        versionName "0.7.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -70,6 +70,9 @@ dependencies {
 
     implementation 'com.android.volley:volley:1.1.1'
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+
+    implementation "androidx.preference:preference:1.1.1"
+
 
 
 }
