--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
         minSdkVersion 23
         targetSdkVersion 29
         versionCode 1
-        versionName "0.7.9"
+        versionName "0.7.10"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -57,6 +57,9 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-analytics:17.4.4'
     implementation 'com.google.firebase:firebase-messaging:20.2.3'
+
+    implementation 'pub.devrel:easypermissions:3.0.0'
+
     // Add the SDKs for any other Firebase products you want to use in your app
 
     // Facebook
