--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,10 @@
 /captures
 .externalNativeBuild
 .cxx
-.app/google-services.json
+/.idea/caches
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+/.idea/navEditor.xml
+/.idea/assetWizardSettings.xml
+google-services.json
