--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 *.iml
 .gradle
 /local.properties
-.idea
+.idea/
 .DS_Store
 /build
 /captures
@@ -13,4 +13,3 @@
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
-google-services.json
