--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.hudzah.wearamask"
         minSdkVersion 23
         targetSdkVersion 29
-        versionCode 8
-        versionName "0.7.17"
+        versionCode 9
+        versionName "0.8.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -59,6 +59,12 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:20.2.3'
 
     implementation 'pub.devrel:easypermissions:3.0.0'
+
+    // Room android
+    def room_version = "2.2.5"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
 
     // Add the SDKs for any other Firebase products you want to use in your app
 
